style renamed and path changed

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <meta name="theme-color" content="#0f172a" />
     <meta name="next-head-count" content="29" />
    
-    <link rel="preload" href="../css/custom_css.css" as="style" />
-    <link rel="stylesheet" href="../css/custom_css.css" data-n-g="" />
+    <link rel="preload" href="css/style.css" as="style" />
+    <link rel="stylesheet" href="css/style.css" data-n-g="" />
     <noscript data-n-css=""></noscript>
    
 </head>
