media url tweaked

--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
                                             <img alt="" loading="lazy" width="200" height="48" decoding="async"
                                                 data-nimg="1"
                                                 class="rounded border-2 border-slate-200/10 transition group-hover:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1"
-                                                style="color: transparent" src="/images/greencoins.png" />
+                                                style="color: transparent" src="images/greencoins.png" />
                                         </div>
                                     </li>
                                     <li class="mb-12">
@@ -685,7 +685,7 @@
                                             <img alt="" loading="lazy" width="200" height="48" decoding="async"
                                                 data-nimg="1"
                                                 class="rounded border-2 border-slate-200/10 transition group-hover:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1"
-                                                style="color: transparent" src="/images/inksvilla.png" />
+                                                style="color: transparent" src="images/inksvilla.png" />
                                         </div>
                                     </li>
                                     <li class="mb-12">
@@ -733,7 +733,7 @@
                                             <img alt="" loading="lazy" width="200" height="48" decoding="async"
                                                 data-nimg="1"
                                                 class="rounded border-2 border-slate-200/10 transition group-hover:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1"
-                                                style="color: transparent" src="/images/gantabyataxi.jpeg" />
+                                                style="color: transparent" src="images/gantabyataxi.jpeg" />
                                         </div>
                                     </li>
                                     <li class="mb-12">
@@ -788,7 +788,7 @@
                                             <img alt="" loading="lazy" width="200" height="48" decoding="async"
                                                 data-nimg="1"
                                                 class="rounded border-2 border-slate-200/10 transition group-hover:border-slate-200/30 sm:order-1 sm:col-span-2 sm:translate-y-1"
-                                                style="color: transparent" src="/images/jauguru.jpeg" />
+                                                style="color: transparent" src="images/jauguru.jpeg" />
                                         </div>
                                     </li>
                                 </ul>
