--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
     <meta name="msapplication-TileColor" content="#0f172a" />
     <meta name="theme-color" content="#0f172a" />
     <meta name="next-head-count" content="29" />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
    
     <link rel="preload" href="css/style.css" as="style" />
     <link rel="stylesheet" href="css/style.css" data-n-g="" />
@@ -80,31 +83,31 @@
                                 I build accessible, inclusive products and digital experiences
                                 for mobile phones.
                             </p>
-                            <nav class="nav hidden lg:block" aria-label="In-page jump links">
+                            <nav class="nav lg:block" aria-label="In-page jump links">
                                 <ul class="mt-16 w-max">
                                     <li>
-                                        <a class="group flex items-center py-3 active" href="#about"><span
+                                        <a class="list group flex items-center py-3 active" href="#about"><span
                                                 class="nav-indicator mr-4 h-px w-8 bg-slate-600 transition-all group-hover:w-16 group-hover:bg-slate-200 group-focus-visible:w-16 group-focus-visible:bg-slate-200 motion-reduce:transition-none"></span><span
                                                 class="nav-text text-xs font-bold uppercase tracking-widest text-slate-500 group-hover:text-slate-200 group-focus-visible:text-slate-200">About</span></a>
                                     </li>
                                     <li>
-                                        <a class="group flex items-center py-3" href="#experience"><span
+                                        <a class="list group flex items-center py-3" href="#experience"><span
                                                 class="nav-indicator mr-4 h-px w-8 bg-slate-600 transition-all group-hover:w-16 group-hover:bg-slate-200 group-focus-visible:w-16 group-focus-visible:bg-slate-200 motion-reduce:transition-none"></span><span
                                                 class="nav-text text-xs font-bold uppercase tracking-widest text-slate-500 group-hover:text-slate-200 group-focus-visible:text-slate-200">Experience</span></a>
                                     </li>
                                     <li>
-                                        <a class="group flex items-center py-3" href="#projects"><span
+                                        <a class="list group flex items-center py-3" href="#projects"><span
                                                 class="nav-indicator mr-4 h-px w-8 bg-slate-600 transition-all group-hover:w-16 group-hover:bg-slate-200 group-focus-visible:w-16 group-focus-visible:bg-slate-200 motion-reduce:transition-none"></span><span
                                                 class="nav-text text-xs font-bold uppercase tracking-widest text-slate-500 group-hover:text-slate-200 group-focus-visible:text-slate-200">Projects</span></a>
                                     </li>
                                     <li>
-                                        <a class="group flex items-center py-3" href="#highlights"><span
+                                        <a class="list group flex items-center py-3" href="#highlights"><span
                                                 class="nav-indicator mr-4 h-px w-8 bg-slate-600 transition-all group-hover:w-16 group-hover:bg-slate-200 group-focus-visible:w-16 group-focus-visible:bg-slate-200 motion-reduce:transition-none"></span><span
                                                 class="nav-text text-xs font-bold uppercase tracking-widest text-slate-500 group-hover:text-slate-200 group-focus-visible:text-slate-200">Career Highlights</span></a>
                                     </li>
 
                                     <li>
-                                        <a class="group flex items-center py-3" href="#personal"><span
+                                        <a class="list group flex items-center py-3" href="#personal"><span
                                                 class="nav-indicator mr-4 h-px w-8 bg-slate-600 transition-all group-hover:w-16 group-hover:bg-slate-200 group-focus-visible:w-16 group-focus-visible:bg-slate-200 motion-reduce:transition-none"></span><span
                                                 class="nav-text text-xs font-bold uppercase tracking-widest text-slate-500 group-hover:text-slate-200 group-focus-visible:text-slate-200">Personal</span></a>
                                     </li>
@@ -156,7 +159,7 @@
                         </ul>
                     </header>
                     <main id="content" class="pt-24 lg:w-1/2 lg:py-24">
-                        <section id="about" class="mb-16 scroll-mt-16 md:mb-24 lg:mb-36 lg:scroll-mt-24"
+                        <section id="about" class=" active mb-16 scroll-mt-16 md:mb-24 lg:mb-36 lg:scroll-mt-24"
                             aria-label="About me">
                             <div
                                 class="sticky top-0 z-20 -mx-6 mb-4 w-screen bg-slate-900/75 px-6 py-5 backdrop-blur md:-mx-12 md:px-12 lg:sr-only lg:relative lg:top-auto lg:mx-auto lg:w-full lg:px-0 lg:py-0 lg:opacity-0">
@@ -187,7 +190,7 @@
                                 </p>
                             </div>
                         </section>
-                        <section id="experience" class="mb-16 scroll-mt-16 md:mb-24 lg:mb-36 lg:scroll-mt-24"
+                        <section id="experience" class=" mb-16 scroll-mt-16 md:mb-24 lg:mb-36 lg:scroll-mt-24"
                             aria-label="Work experience">
                             <div
                                 class="sticky top-0 z-20 -mx-6 mb-4 w-screen bg-slate-900/75 px-6 py-5 backdrop-blur md:-mx-12 md:px-12 lg:sr-only lg:relative lg:top-auto lg:mx-auto lg:w-full lg:px-0 lg:py-0 lg:opacity-0">
@@ -575,7 +578,7 @@
                                 </div>
                             </div>
                         </section>
-                        <section id="projects" class="mb-16 scroll-mt-16 md:mb-24 lg:mb-36 lg:scroll-mt-24"
+                        <section id="projects" class=" mb-16 scroll-mt-16 md:mb-24 lg:mb-36 lg:scroll-mt-24"
                             aria-label="Selected projects">
                             <div
                                 class="sticky top-0 z-20 -mx-6 mb-4 w-screen bg-slate-900/75 px-6 py-5 backdrop-blur md:-mx-12 md:px-12 lg:sr-only lg:relative lg:top-auto lg:mx-auto lg:w-full lg:px-0 lg:py-0 lg:opacity-0">
@@ -810,7 +813,7 @@
                             </div>
                         </section>
 
-                        <section id="highlights" class="mb-16 scroll-mt-16 md:mb-24 lg:mb-36 lg:scroll-mt-24"
+                        <section id="highlights" class="list mb-16 scroll-mt-16 md:mb-24 lg:mb-36 lg:scroll-mt-24"
                         aria-label="Selected projects">
                         <div
                             class="sticky top-0 z-20 -mx-6 mb-4 w-screen bg-slate-900/75 px-6 py-5 backdrop-blur md:-mx-12 md:px-12 lg:sr-only lg:relative lg:top-auto lg:mx-auto lg:w-full lg:px-0 lg:py-0 lg:opacity-0">
@@ -961,42 +964,74 @@
             </div>
         </div>
     </div>
+ <script>
 
+    
 
-    <script src="https://unpkg.com/kinet@2.2.1/dist/kinet.min.js"></script>
-    <script>
-        // create instance of kinet with custom settings
-        var kinet = new Kinet({
-            acceleration: 0.06,
-            friction: 0.20,
-            names: ["x", "y"],
-        });
+let section = document.querySelectorAll('section');
+        let lists = document.querySelectorAll('list');
+        function activeLink(li) {
+            lists.forEach((item) => item.classList.remove('active'));
+            li.classList.add('active');
+        }
+       
+        lists.forEach((item) =>
+            item.addEventListener('click', function(){
+                activeLink(this);
+            }));
 
-        // select circle element
-        var circle = document.getElementById('circle');
+        window.onscroll = () => {
+            section.forEach(sec => {
+                let top = window.scrollY;
+                let offset = sec.offsetTop;
+                let height = sec.offsetHeight;
+                let id = sec.getAttribute('id');
 
-        // set handler on kinet tick event
-        kinet.on('tick', function(instances) {
-            circle.style.transform = `translate3d(${ (instances.x.current) }px, ${ (instances.y.current) }px, 0) rotateX(${ (instances.x.velocity/2) }deg) rotateY(${ (instances.y.velocity/2) }deg)`;
-        });
+                if (top >= offset && top < offset + height) {
+                    const target = document.querySelector(`[href='#${id}']`).parentElement;
+                    activeLink(target);
 
-       // call kinet animate method on mousemove
-        document.addEventListener('mousemove', function (event) {
-            kinet.animate('x', event.clientX - window.innerWidth/2);
-            kinet.animate('y', event.clientY - window.innerHeight/2);
-        });
+                }
+            })
+        }
 
+//     $(document).ready(function() {
+//     $(document).on("scroll", onScroll);
 
+//   //smoothscroll
+//   $('a[href^="#"]').on('click', function(e) {
+//     e.preventDefault();
+//     $(document).off("scroll");
 
+//     $('a').each(function() {
+//       $(this).removeClass('active');
+//     })
+//     $(this).addClass('active');
 
-        // log
-        kinet.on('start', function() {
-            console.log('start');
-        });
+//     var target = this.hash,
+//       menu = target;
+//     $target = $(target);
+//     $('html, body').stop().animate({
+//       'scrollTop': $target.offset().top + 2
+//     }, 500, 'swing', function() {
+//       window.location.hash = target;
+//       $(document).on("scroll", onScroll);
+//     });
+//   });
+// });
 
-        kinet.on('end', function() {
-            console.log('end');
-        });
+// function onScroll(event) {
+//   var scrollPos = $(document).scrollTop();
+//   $('#items-center a').each(function() {
+//     var currLink = $(this);
+//     var refElement = $(currLink.attr("href"));
+//     if (refElement.position().top <= scrollPos && refElement.position().top + refElement.height() > scrollPos) {
+//       $('#items-center ul li a').removeClass("active");
+//       currLink.addClass("active");
+//     } else {
+//       currLink.removeClass("active");
+//     }
+//   });
     </script>
 
     <!-- <script id="__NEXT_DATA__" type="text/plain">
