--- a/archive.html
+++ b/archive.html
@@ -14,9 +14,11 @@
     <link rel="manifest" href="/favicon/site.webmanifest" />
     <meta name="msapplication-TileColor" content="#0f172a" />
     <meta name="theme-color" content="#0f172a" />
-    <link rel="preload" href="css/custom_css.css" as="style" />
-    <link rel="stylesheet" href="css/custom_css.css" data-n-g="" />
+    <link rel="preload" href="css/style.css" as="style" />
+    <link rel="stylesheet" href="css/style.css" data-n-g="" />
     <noscript data-n-css=""></noscript>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
    
 </head>
 
