--- a/index.html
+++ b/index.html
@@ -4,18 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <!-- <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'G-4FFCWEC2WB', {
-            page_path: window.location.pathname,
-        });
-    </script> -->
+    
     <title>Ashik Subedi</title>
     <meta name="description"
         content="Ashik Subedi is a mobile application developer who builds accessible, inclusive products and digital experiences for the mobile phone." />
@@ -76,7 +65,7 @@
                                 <a href="/">Ashik Subedi</a>
                             </h1>
                             <h2 class="mt-3 text-lg font-medium tracking-tight text-slate-200 sm:text-xl">
-                                Freelance Mobile Application Developer
+                                Mobile Application Developer
                             </h2>
                             <p class="mt-4 max-w-xs leading-normal">
                                 I build accessible, inclusive products and digital experiences
